// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render 1`] = `
<div>
  <div
    class="_frame_331539 _hidden_331539"
  >
    <img
      alt="test image"
      src="test"
    />
    <svg
      viewBox="0 0 1.3333333333333333 1"
    />
  </div>
</div>
`;

exports[`should unhide on image load 1`] = `
<div>
  <div
    class="_frame_331539"
  >
    <img
      alt="test image"
      src="test"
    />
    <svg
      viewBox="0 0 1.3333333333333333 1"
    />
  </div>
</div>
`;
